Conf file additions.  Wrapper script fixes.

--- a/s3backup/etc/s3backup.cfg
+++ b/s3backup/etc/s3backup.cfg
@@ -9,18 +9,36 @@
 #                              of the backup file.
 #
 # s3_url                       S3 URL for storing the backup file.
-#                              [FORMAT: 's3://bucket/path/'
+#                              [FORMAT: 's3://BUCKET_NAME/PATH'
 #
 # s3_url_metadata              S3 URL for storing the metadata file.  This
 #                              could be in a separate location.
-#                              [FORMAT: 's3://bucket/path/'
+#                              [FORMAT: 's3://BUCKET_NAME/PATH'
+#
+# encryption_key_filename      File name containing the AES-256 encryption
+#                              key for encrypting backups.
+#                              PROTECT this file with minimal read permissions
+#                              (chmod 400 FILENAME).
+#                              [DEFAULT: etc/encryption_key
+#
+# metadata_destination         Local destination for the metadata files.
+#                              [DEFAULT: meta/BUCKET_NAME/PATH]
+#
+# manifest_destination         Local destination for the manifest files
+#                              which list the contents of tar archives.
+#                              Archives are assumed to be compressed with
+#                              .tar.gz extension.
+#                              [DEFAULT: manifest/BUCKET_NAME/PATH]
 #
     
 [DEFAULT]
 backup_source = personal
 file_checksum_method = sha512
-s3_url = s3://bucket-name/path
-s3_url_metadata = s3://bucket-name/path
+s3_url = s3://BUCKET_NAME/PATH
+s3_url_metadata = s3://BUCKET_NAME/PATH
+encryption_key_filename = etc/encryption_key
+metadata_destination = meta/BUCKET_NAME/PATH
+manifest_destination = manifest/BUCKET_NAME/PATH
 
 
 
