Rework of create_metadata, encrypt_files, s3_upload to build initial working copy of s3backup.

--- a/create_metadata/etc/metadata.cfg
+++ b/create_metadata/etc/metadata.cfg
@@ -10,7 +10,7 @@
 #                              [DEFAULT: personal]
 #       
 # encryption_key               Key used to encrypt the backup.
-#                              [DEFAULT: GPG key]
+#                              [DEFAULT: GPG]
 #       
 # s3_url                       S3 URL for the backup file.
 #                              [DEFAULT: s3://BUCKET_NAME/PATH]
@@ -20,7 +20,7 @@
 #       
 [DEFAULT]
 backup_source = personal
-encryption_key = GPG key
+encryption_key = GPG
 s3_url = s3://BUCKET_NAME/PATH
 s3_url_metadata = s3://BUCKET_NAME/PATH
 
