Test cleanup of s3_upload.  Doc updates.  Code cleanup.

--- a/s3_upload/etc/aws_s3.cfg
+++ b/s3_upload/etc/aws_s3.cfg
@@ -5,15 +5,16 @@
 #    <class 'aws_conf.AWSConf'>
 # Configuration file for metadata file settings.
 #       
-# mp_threshold                 Threshold in bytes where an upload to S3 is broken
-#                              into a multipart upload.
+# mp_threshold                 Files above this threshold (in bytes) will
+#                              use multipart upload with BOTO3 S3 resource
+#                              and threads instead of the BOTO3 S3 client.
 #                              [DEFAULT: 33554432] (32 MB)
 #       
-# max_concurrency              Maximum concurrent uploads running.
+# max_concurrency              Maximum concurrent uploads to run.
 #                              [DEFAULT: 10]
 #       
-# mp_chunksize                 Threshold in bytes where an upload to S3 is broken
-#                              into a multipart upload.
+# mp_chunksize                 Size of chunks (in bytes) for a multipart
+#                              upload.
 #                              [DEFAULT: 33554432] (32 KB)
 #       
 [DEFAULT]
