--- a/s3_backup/etc/s3_backup.cfg
+++ b/s3_backup/etc/s3_backup.cfg
@@ -7,7 +7,7 @@
 # All directory paths which do not start with '/' are relative to the
 # top level working directory:
 #
-#     /Users/marty/Documents/projects/s3backup
+#     /Users/marty/Documents/src/bin/s3_backup
 #       
 # metadata_destination         Local destination where metadata files are stored
 #                              after the entire process is finished.
@@ -73,7 +73,7 @@
 # metadata_script              Script used to create metadata files.
 #                              [DEFAULT: bin/action_metadata.py]
 #       
-# s3upload_dir                 Files and archives located here will be uploaded
+# s3_upload_dir                Files and archives located here will be uploaded
 #                              to the S3 bucket listed in the metadata file for
 #                              that file or archive.
 #
@@ -91,11 +91,11 @@
 #                              [DEFAULT: work/50-s3_upload]
 #       
 # upload_script                Script used to upload files to S3.
-#                              [DEFAULT: bin/action_s3upload.sh]
+#                              [DEFAULT: bin/action_s3_upload.sh]
 #       
 [DEFAULT]
-metadata_destination = /PATH/TO/FINAL/METADATA/DIR
-manifest_destination = /PATH/TO/FINAL/MANIFEST/DIR
+metadata_destination = meta
+manifest_destination = manifest
 drop_dir = work/10-drop
 drop_script = bin/action_drop.py
 manifest_dir = work/20-tar_manifest
@@ -104,10 +104,8 @@ encrypt_dir = work/30-encrypt
 encrypt_script = bin/action_encrypt.py
 metadata_dir = work/40-create_metadata
 metadata_script = bin/action_metadata.py
-s3upload_dir = work/50-s3_upload
-upload_script = bin/action_s3upload.sh
-
-
+s3_upload_dir = work/50-s3_upload
+upload_script = bin/action_s3_upload.sh
 
 #============================================================================#
 # END
